[package]
name = "serde_bencode_tests"
version = "0.1.0"
authors = ["Travis Kaufman <travis.kaufman@gmail.com>"]
build = "build.rs"
publish = false

[features]
default = ["serde_codegen"]
unstable = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
serde = "0.8"
serde_derive = { version = "0.8", optional = true }
serde_bencode = { path = "../bencode" }

[[test]]
name = "test"
path = "tests/integration_test.rs"
